<resources>
    <string name="app_name">ApprentiRec</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Your e-mail</string>
    <string name="first_name">Your first name</string>
    <string name="name">Your name</string>
    <string name="password">Set a password (6 characters min)</string>
    <string name="candidate">You are a candidate</string>
    <string name="hr">You are a HR</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">ApprentiRec</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_modifier_cv">ModifierCV</string>

    <string name="title_activity_profile_candi">activity_profileCandidat</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="adresse_mail">Adresse Mail</string>
    <string name="num_ro_de_t_l_phone">Numéro de téléphone</string>
    <string name="btn_pdp" />
    <string name="cv">CV</string>
    <string name="FORMATION">Formation</string>
    <string name="EXPERIENCE">Experience </string>
    <string name="COMPETENCE">Competence</string>
    <string name="Langue"> Langue </string>
    <string name="Enregistrer">Enregistrer</string>

    <string name="pdp_img">image Pdp</string>


</resources>
