<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity.SignupActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/activity_horizontal_margin"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/apprentirec" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/first_name"
            android:layout_marginTop="0dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/name"
            android:layout_marginTop="0dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/email"
            android:layout_marginTop="0dp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:imeOptions="actionUnspecified"
            android:layout_marginTop="0dp"
            android:inputType="textPassword" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:layout_gravity="center">
            <RadioButton
                android:id="@+id/candidate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/candidate"/>
            <RadioButton
                android:id="@+id/hr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hr"/>
        </RadioGroup>

        <!-- Registration -->
        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textStyle="bold" />

        <!-- Reset password -->
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <!-- Login link -->
        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textSize="15dp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>